2022-09-18T08:24:07Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3076438248
* notice: last 14d: unq all: 13 36
* notice: prev accum: outdated-unq outdated-all / unq all: 593 2421 / 616 2456
* notice: next accum: outdated-unq outdated-all / unq all: 594 2422 / 618 2458
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2022-09-04] / [2022-09-18]

2022-09-17T16:27:54Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3074022417
* notice: last 14d: unq all: 12 35
* notice: prev accum: outdated-unq outdated-all / unq all: 593 2421 / 616 2455
* notice: next accum: outdated-unq outdated-all / unq all: 593 2421 / 616 2456
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2022-09-17]

2022-09-17T08:25:12Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3072693532
* notice: last 14d: unq all: 12 34
* notice: prev accum: outdated-unq outdated-all / unq all: 593 2421 / 614 2453
* notice: next accum: outdated-unq outdated-all / unq all: 593 2421 / 616 2455
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-17]

2022-09-17T02:01:38Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3071745766
* notice: last 14d: unq all: 11 32
* notice: prev accum: outdated-unq outdated-all / unq all: 592 2419 / 614 2451
* notice: next accum: outdated-unq outdated-all / unq all: 593 2421 / 614 2453
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-09-02] / [2022-09-16]

2022-09-16T16:28:15Z:
* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3069308522
* notice: last 14d: unq all: 11 32