@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-18T08:24:07Z",
+  "timestamp" : "2022-09-18T16:27:19Z",
   "count_outdated" : 2422,
   "uniques_outdated" : 594,
-  "count" : 2458,
-  "uniques" : 618,
+  "count" : 2460,
+  "uniques" : 619,
   "clones" : [
     {
       "timestamp": "2022-09-05T00:00:00Z",
@@ -91,10 +91,10 @@
     },
     {
       "timestamp": "2022-09-18T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 4,
+      "count_minmax": [ 2, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ]
     }
   ]
 }
