@@ -1,6 +1,6 @@
 {
-  "count": 36,
-  "uniques": 13,
+  "count": 38,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-09-05T00:00:00Z",
@@ -64,8 +64,8 @@
     },
     {
       "timestamp": "2022-09-18T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
