@@ -1,3 +1,11 @@
+2022-09-18T16:27:19Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3077836997
+* notice: last 14d: unq all: 14 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 594 2422 / 618 2458
+* notice: next accum: outdated-unq outdated-all / unq all: 594 2422 / 619 2460
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [] / [2022-09-18]
+
 2022-09-18T08:24:07Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3076438248
 * notice: last 14d: unq all: 13 36
